--- a/index.html
+++ b/index.html
@@ -2,9 +2,31 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>My test page</title>
+    <title>課題</title>
   </head>
   <body>
-    <p>This is my page</p>
+    <h1>「Webコンテンツの作成」の成果</h1>
+    <h2>本テーマについて</h2>
+    <p>(ここにはこのテーマの学習の目的と目標を記載してください.シラバスを参考にしましょう.(100文字)</p>
+    <h2>プロジェクト課題について</h2>
+    <p>(ここには皆さんが取り組んだプロジェクト課題について書きましょう.)(200文字以上)</p>
+    <p>プロジェク課題で作成したページ:
+      <a href="project.html" target="_blank">project.html</a>
+    </p>
+    </p>
+    <h2>数当てゲーム</h2>
+    <p>(このテーマの第3回から数当てゲームを作りますので,その後にゲームの概要を説明してください.)(200文字以上)</p>
+    <p>数当てゲームのページ:kazuate.html</p>
+    <h2>各授業回の学習事項</h2>
+    <h3>第一回 WWWとHTML</h3>
+    <p>HTMLはたくさんの要素で構成されていることがわかった.それぞれあらかじめ決められた要素名や属性を使用することでページを作成できることを知った.また,他のプログラムとは違いコンパイルができないのでエラーに気づかずに期待通りのページを表示しないことがあることを知った.</p>
+    <p>演習の成果:
+      <a href="structure.html" target="_blank">演習1-3のHTMLファイル</a>
+    </p>
+    <h3>第2回 CSSによるWebページの装飾</h3>
+    <h3>第3回 JavaScriptの基本</h3>
+    <h3>第4回 DOMとJavaScript</h3>
+    <h3>第5回 イベント処理</h3>
+
   </body>
 </html>
