--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>課題</title>
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
     <h1>「Webコンテンツの作成」の成果</h1>
@@ -21,12 +22,13 @@
     <h3>第一回 WWWとHTML</h3>
     <p>HTMLはたくさんの要素で構成されていることがわかった.それぞれあらかじめ決められた要素名や属性を使用することでページを作成できることを知った.また,他のプログラムとは違いコンパイルができないのでエラーに気づかずに期待通りのページを表示しないことがあることを知った.</p>
     <p>演習の成果:
-      <a href="structure.html" target="_blank">演習1-3のHTMLファイル</a>
+      <a href="practice-html/elements.html" target="_blank">演習1-4のHTMLのさまざまな要素</a>
     </p>
     <h3>第2回 CSSによるWebページの装飾</h3>
     <h3>第3回 JavaScriptの基本</h3>
     <h3>第4回 DOMとJavaScript</h3>
     <h3>第5回 イベント処理</h3>
+    
 
   </body>
 </html>
