--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
       <a href="practice-html/elements.html" target="_blank">演習1-4のHTMLのさまざまな要素</a>
     </p>
     <h3>第2回 CSSによるWebページの装飾</h3>
+    <a href="practice-css/browser-intro.html" target="_blank">演習2-3のWebブラウザの説明ページの装飾</a>
     <h3>第3回 JavaScriptの基本</h3>
     <h3>第4回 DOMとJavaScript</h3>
     <h3>第5回 イベント処理</h3>
