--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </p>
     <h2>数当てゲーム</h2>
     <p>(このテーマの第3回から数当てゲームを作りますので,その後にゲームの概要を説明してください.)(200文字以上)</p>
-    <p>数当てゲームのページ:kazuate.html</p>
+    <p>数当てゲームのページ:<a href="kazuate.html" target="_blank">演習1-4のHTMLのさまざまな要素</a></p>
     <h2>各授業回の学習事項</h2>
     <h3>第一回 WWWとHTML</h3>
     <p>HTMLはたくさんの要素で構成されていることがわかった.それぞれあらかじめ決められた要素名や属性を使用することでページを作成できることを知った.また,他のプログラムとは違いコンパイルができないのでエラーに気づかずに期待通りのページを表示しないことがあることを知った.</p>
