--- a/practice-dom/dom-exercise.html
+++ b/practice-dom/dom-exercise.html
@@ -22,7 +22,7 @@
 	  <ul id="location">
 		<li>この要素は JavaScript プログラムで削除すること</li>
 		<li>この要素は JavaScript プログラムで削除すること</li>
-		<li>この要素は JavaScript プログラムで削除すること</li>
+		<li>この要素は JavaScript プログラムで削除することk</li>
 	  </ul>
   </body>
 </html>
