--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
     <h3>第2回 CSSによるWebページの装飾</h3>
     <a href="practice-css/browser-intro.html" target="_blank">演習2-3のWebブラウザの説明ページの装飾</a>
     <h3>第3回 JavaScriptの基本</h3>
-    <a href="obj-practice.html" target="_blank">練習3-6:オブジェクトの参照</a>
+    <a href="practice-js/obj-practice.html" target="_blank">練習3-6:オブジェクトの参照</a>
     <h3>第4回 DOMとJavaScript</h3>
-    <a href="pricttie-dom/dom-exercise.html" target="_blank">練習問題4-2から4-5-DOMプログラミング</a>
+    <a href="practice-dom/dom-exercise.html" target="_blank">練習問題4-2から4-5-DOMプログラミング</a>
     <h3>第5回 イベント処理</h3>
     
 
