--- a/project.html
+++ b/project.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>世界の天気</title>
+    <script src="weather.js" defer></script>
   </head>
   <body>
     <h1>世界の天気</h1>
@@ -11,6 +12,8 @@
         <li>最低気温: 9.94</li>
         <li>最高気温: 9.94</li>
         <li>湿度: 14</li>
+        
     </ul></h3>
+    <div id="result"></div>
 　</body>
 </html>
