--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <h3>第4回 DOMとJavaScript</h3>
     <a href="practice-dom/dom-exercise.html" target="_blank">練習問題4-2から4-5-DOMプログラミング</a>
     <h3>第5回 イベント処理</h3>
-    <a href="practice-event/list.html" target="_blank">練習問題5-3イベント処理</a>
+    <a href="practice-event/event-list.html" target="_blank">練習問題5-3イベント処理</a>
 
   </body>
 </html>
