--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <h1>「Webコンテンツの作成」の成果</h1>
     <h2>本テーマについて</h2>
-    <p>(ここにはこのテーマの学習の目的と目標を記載してください.シラバスを参考にしましょう.(100文字)</p>
+    <p>先行する情報工学の専門科目の基礎知識を応用して実践的な能力を修得することが目的で、手順書を読み、実験を行い、レポートやプレゼンテーションにより報告するという実験の一連の流れを実践できるようになり、コミュニケーション能力の重要性を理解し、グループワークを円滑に実施できるようにする.また、モーション解析・編集やHTML等を用いたWebページ作成ができるようになることです.</p>
     <h2>プロジェクト課題について</h2>
     <p>(ここには皆さんが取り組んだプロジェクト課題について書きましょう.)(200文字以上)</p>
     <p>プロジェク課題で作成したページ:
@@ -16,8 +16,8 @@
     </p>
     </p>
     <h2>数当てゲーム</h2>
-    <p>(このテーマの第3回から数当てゲームを作りますので,その後にゲームの概要を説明してください.)(200文字以上)</p>
-    <p>数当てゲームのページ:<a href="kazuate.html" target="_blank">演習1-4のHTMLのさまざまな要素</a></p>
+    <p>数当てゲームは１〜１０の中からランダムに数が決まるので、その数が何かを予想してテキストボックスに自分が予想した数を入れることでその数が正解か不正解かがわかります.もし自分が予想した数が正解ならそこでゲームが終了して数の予想も終わります.しかし、不正解の場合は、予想した数がランダムに決められた正解の数より大きいかまたは小さいかどうかを教えてくれます.このヒントによって正解の数が自分の予想した数とのズレがわかるので正解を当てやすくなっています.またゲームは3回目まで予想することができます.そして、4回目以降は予想しても正解の数の答えとゲームが終わっていますと表示されもう予想をすることはできません.</p>
+    <p>数当てゲームのページ:<a href="kazuate.html" target="_blank">数当てゲーム</a></p>
     <h2>各授業回の学習事項</h2>
     <h3>第一回 WWWとHTML</h3>
     <p>HTMLはたくさんの要素で構成されていることがわかった.それぞれあらかじめ決められた要素名や属性を使用することでページを作成できることを知った.また,他のプログラムとは違いコンパイルができないのでエラーに気づかずに期待通りのページを表示しないことがあることを知った.</p>
@@ -25,13 +25,20 @@
       <a href="practice-html/elements.html" target="_blank">演習1-4のHTMLのさまざまな要素</a>
     </p>
     <h3>第2回 CSSによるWebページの装飾</h3>
+    <p>第2回の講義ではCSSの使い方を学びました.CSSを使うことでHTMLで作ったページの見た目を変化させる事ができる事がわかりました.また.CSSのデバッグはウェブ開発ツールを使う事で間違いが見つけやすくなる事がわかりました.</p>
     <a href="practice-css/browser-intro.html" target="_blank">演習2-3のWebブラウザの説明ページの装飾</a>
     <h3>第3回 JavaScriptの基本</h3>
+    <p>第3回の講義では、javascriptを使うことで、Webページ上の複雑なプログラムを実現するプログラミング言語だということがわかりました.また、javaとjavascriptは名前は似ているけど全然違う言語だという事がわかりました.</p>
     <a href="practice-js/obj-practice.html" target="_blank">練習3-6:オブジェクトの参照</a>
     <h3>第4回 DOMとJavaScript</h3>
+    <p>第4回の講義では、DOMの使い方を学びました.Webコンテンツの内容を読み取ったり、コンテンツに変化を加えたりすることしてjavascriptと組み合わせることで動きのあるWebページを作れることがわかりました.</p>
     <a href="practice-dom/dom-exercise.html" target="_blank">練習問題4-2から4-5-DOMプログラミング</a>
     <h3>第5回 イベント処理</h3>
+    <p>第5回の講義では、イベント処理のやり方を学びました.input要素を学ぶことで入力フォームを作成することが作成する事ができました.またtypeの属性には色々な種類があり、その入力する種類事にユーザーインターフェースが違うこともわかりました.</p>
     <a href="practice-event/event-list.html" target="_blank">練習問題5-3イベント処理</a>
-
+    <h3>感想</h3>
+    <p>この実習を学んだことで、HTML、CSS、javascriptを組み合わせてWebページを作成する方法を身につける事ができました.HTMLはそれぞれの要素で作られていて、他のプログラミング言語とは違っていて難しさを感じました.またタグを通しで囲んだり、要素に付加する属性もあり難しかったです.しかし慣れてくると、とても簡単に感じ簡単なWebページを作成することができるようになりました.HTMLで作ったWebページの見た目を変化させるためにCSSを使うこともこの講義で学びました.CSSを使うと文字の色やサイズ、フォントなどを変える事ができWebページをさらに魅力的にかつ、見やすくさせる事ができる事がわかりました.CSSをHTMLに適応させるためには、外部ファイルとリンクさせなければいけなくそこが初めての経験だったのでhead要素の中にファイルの指定をするのを忘れてしまう事が多くなぜうまく機能しないのかと悩む事があり苦悩する点でしたが、最初からhead要素の中にかいておくことでその失敗がなくなるようにしました.さらにWebページに複雑な機能をつけるためにjavascriptを学びました.javascriptを使う事で動きのあるページを作れることになり、またDOMと組み合わせることでより動きのあるWebページを作成できる事がわかりましたが、DOMの要素の検索や、div要素がよく理解できなくて演習などでつまずいてしますことがあったが、講義資料を見返しながらプログラムを描いてるうちに慣れてきてうまく扱う事ができたと思います.また、DOMなどを使うことで課題で最初HTMLの文が長くなっていたが、すっきりとまとめる事ができ見やすくなることがわかりました.さらにそこにボタンを押したら
+      次の処理がされるというイベント処理の方法や検索のために通信処理をすることでWebページを作れて、より見やすくいいものにできることがわかりました.この実習通して私は基本的なWebページの作り方を学ぶ事ができ実際に作ることができました.HTMLで基本的な構造を作り、CSSで見た目を整え、javascriptで動きのある機能をつけるという一連の流れを理解できました.また、Webページを作成する過程でコードの書き方や構造に気を配ることで、メンテナンスしやすいコードを書くことができるようになりました.今後もこの実習で学んだことを生かしていきたいと思います.
+      </p>
   </body>
 </html>
