--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <a href="project.html" target="_blank">project.html</a>
     </p>
     </p>
-    <h2>数当てゲーム.</h2>
+    <h2>数当てゲーム</h2>
     <p>数当てゲームは１〜１０の中からランダムに数が決まるので、その数が何かを予想してテキストボックスに自分が予想した数を入れることでその数が正解か不正解かがわかります.もし自分が予想した数が正解ならそこでゲームが終了して数の予想も終わります.しかし、不正解の場合は、予想した数がランダムに決められた正解の数より大きいかまたは小さいかどうかを教えてくれます.このヒントによって正解の数が自分の予想した数とのズレがわかるので正解を当てやすくなっています.またゲームは3回目まで予想することができます.そして、4回目以降は予想しても正解の数の答えとゲームが終わっていますと表示されもう予想をすることはできません.</p>
     <p>数当てゲームのページ:<a href="kazuate.html" target="_blank">数当てゲーム</a></p>
     <h2>各授業回の学習事項</h2>
